UML-Editor 3.1.x (2010-06-xx) 
----------------------------------
- uml file decoder: "Name" (NlsString) content was replaced by "DefLangName" 
- seperate setting of model language from user interface language

UML-Editor 3.1.5 (2009-10-20) 
----------------------------------
- ili2c-4.2.0
- iliexp: missleading errmsg "no participant attached" if association incomplete defined

UML-Editor 3.1.4 (2009-02-26) 
----------------------------------
- iliexp: link "missing min/max" errmsg to AttributeDef (instead of ClassDef)
- bug iliexp: NullPointerException if no min/max (date/time/dateTime)
- iliexp: check if names adhere to ili rules "[a-zA-Z][a-zA-Z_0-9]*"
- iliexp: run ili-compiler only if no errors found in model by umleditor
- ili2c-4.1.1

UML-Editor 3.1.3 (2008-12-22) 
----------------------------------
- ili2c-4.0.2
- bug iliexp: generated illegal syntax in ClassType restrictions 

UML-Editor 3.1.2 (2008-09-03) 
----------------------------------
- ili2c-3.6.8
- iliimp: NullPointerException if required model missing
- iliimp: added TRANSIENT
- iliexp: added TRANSIENT
- AttributeDef dialog: added TRANSIENT

UML-Editor 3.1.1 (2008-07-30) 
----------------------------------
- ili2c-3.6.7
- XOR drawing improved

UML-Editor 3.1.0 (2007-12-28) 
----------------------------------
- iliexp: added RoleDef XOR
- iliimp: added RoleDef XOR
- iliimp: added RoleDef RESTRICTIONS
- iliimp: added EXTERNAL
- RoleDef dialog added XOR

UML-Editor 3.0.2 (2007-12-19) 
----------------------------------
- bug iliimp: ignored ilidoc comments for attributes
- bug iliexp: missing ';' at end of TopicDef OID AS
- sf1845385: incorrect redraw if scaled
- Bug: active edit box jumped to middle of upper drawing border, due to new layout triggered by a revalidate() call from LauncherView.setStatus()

UML-Editor 3.0.1 (2006-08-11) BETA
----------------------------------
- INTERLIS-Compiler 3.1.2
- bug: plain text instead of links to model elements in logview