@@ -1,7 +1,8 @@
 UML-Editor 3.1.x (2010-06-xx) 
 ----------------------------------
-- uml file decoder: "Name" (NlsString) content was replaced by "DefLangName" 
+- bug uml file decoder: "Name" (NlsString) content was replaced by "DefLangName" 
 - seperate setting of model language from user interface language
+- bug: DomainDef  selection dialog called by AttributeDef dialog suppressed DomainDefs referenced by dependecies of the ClassDef
 
 UML-Editor 3.1.5 (2009-10-20) 
 ----------------------------------
